--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,62 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.message-mine {
+  /*background: linear-gradient(to bottom, #00D0EA 0%, #0085D1 100%);*/
+  background-attachment: fixed;
+  position: relative;
+}
+
+.message-mine:before {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  bottom: 0;
+  right: -8px;
+  height: 20px;
+  width: 20px;
+  background: inherit;
+  background-attachment: fixed;
+  border-bottom-left-radius: 15px;
+}
+
+.message-mine:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  right: -10px;
+  width: 10px;
+  height: 20px;
+  background: white;
+  border-bottom-left-radius: 10px;
+}
+
+.message-yours {
+  position: relative;
+}
+
+.message-yours:before {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  bottom: 0;
+  left: -7px;
+  height: 20px;
+  width: 20px;
+  background: inherit;
+  border-bottom-right-radius: 15px;
+}
+
+.message-yours:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  left: -10px;
+  width: 10px;
+  height: 20px;
+  background: white;
+  border-bottom-right-radius: 10px;
+}
