--- a/src/index.css
+++ b/src/index.css
@@ -1,72 +1,103 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+        "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+        sans-serif;
+    -webkit-font-smoothing : antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
+}
+
+p {
+    margin: 0;
 }
 
 .message-mine {
-  /*background: linear-gradient(to bottom, #00D0EA 0%, #0085D1 100%);*/
-  background-attachment: fixed;
-  position: relative;
+    background-attachment: fixed;
+    position             : relative;
+    align-self: flex-end;
+    margin: 2px 10px;
+    max-width: 80%;
+    word-break: break-all;
+    border-radius: 10px;
+    padding: 10px;
 }
 
-.message-mine:before {
-  content: "";
-  position: absolute;
-  z-index: 0;
-  bottom: 0;
-  right: -8px;
-  height: 20px;
-  width: 35px;
-  background: inherit;
-  background-attachment: fixed;
-  border-bottom-left-radius: 15px;
+.message-mine p {
+    margin: 0;
+    z-index: 50;
 }
 
-.message-mine:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  bottom: 0;
-  right: -10px;
-  width: 10px;
-  height: 20px;
-  background: white;
-  border-bottom-left-radius: 10px;
+.message-yours p {
+    margin: 0;
+    z-index: 50;
+}
+
+p.timestamp {
+    margin: 0; 
+    font-size: 0.8rem; 
+    opacity: 0.5;
+}
+
+.message-mine.end:before {
+    content                  : "";
+    position                 : absolute;
+    z-index                  : 0;
+    bottom                   : 0;
+    right                    : -8px;
+    height                   : 20px;
+    width                    : 35px;
+    background               : inherit;
+    background-attachment    : fixed;
+    border-bottom-left-radius: 15px;
+}
+
+.message-mine.end:after {
+    content                  : "";
+    position                 : absolute;
+    z-index                  : 3;
+    bottom                   : 0;
+    right                    : -10px;
+    width                    : 10px;
+    height                   : 20px;
+    background               : white;
+    border-bottom-left-radius: 10px;
 }
 
 .message-yours {
-  position: relative;
+    position: relative;
+    align-self: flex-start;
+    margin: 2px 10px;
+    max-width: 80%;
+    word-break: break-all;
+    border-radius: 10px;
+    padding: 10px;
 }
 
-.message-yours:before {
-  content: "";
-  position: absolute;
-  z-index: 0;
-  bottom: 0;
-  left: -7px;
-  height: 20px;
-  width: 35px;
-  background: inherit;
-  border-bottom-right-radius: 15px;
+.message-yours.end:before {
+    content                   : "";
+    position                  : absolute;
+    z-index                   : 0;
+    bottom                    : 0;
+    left                      : -7px;
+    height                    : 20px;
+    width                     : 35px;
+    background                : inherit;
+    border-bottom-right-radius: 15px;
 }
 
-.message-yours:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  bottom: 0;
-  left: -10px;
-  width: 10px;
-  height: 20px;
-  background: white;
-  border-bottom-right-radius: 10px;
+.message-yours.end:after {
+    content                   : "";
+    position                  : absolute;
+    z-index                   : 1;
+    bottom                    : 0;
+    left                      : -10px;
+    width                     : 10px;
+    height                    : 20px;
+    background                : white;
+    border-bottom-right-radius: 10px;
 }
